--- a/.github/workflows/windows-release.yml
+++ b/.github/workflows/windows-release.yml
@@ -72,17 +72,9 @@ jobs:
         windeployqt seqeyes.exe
 
     # ---- Visual Regression (Google Drive Baselines) ----
-    # Install Python deps FIRST, before MSYS2 step can shadow the hosted Python with its own Python binary.
+    # The SVG comparison uses only Python stdlib (re, xml) — no native libraries needed.
     - name: Setup Python Dependencies for Testing
-      run: pip install Pillow cairosvg gdown
-
-    # cairosvg requires native libcairo-2.dll which is NOT bundled with the pip package.
-    # MSYS2 is pre-installed on all GitHub Actions Windows runners.
-    # NOTE: we add MSYS2 to path AFTER pip install, so MSYS2's own Python doesn't shadow the hosted Python.
-    - name: Install Cairo native library (required by cairosvg)
-      run: |
-        C:\msys64\usr\bin\pacman --noconfirm -Sy mingw-w64-x86_64-cairo
-        "C:\msys64\mingw64\bin" | Out-File -FilePath $env:GITHUB_PATH -Append
+      run: pip install gdown
 
     - name: Download Baselines from Google Drive
       env:
@@ -90,20 +82,19 @@ jobs:
         GDRIVE_BASELINE_FOLDER_ID: "1Lhbd8zXQlI6z_o0f6HQPDb1umb_zLush"
       run: |
         mkdir test/baselines -ErrorAction SilentlyContinue
-        # We assume the ID is always set since it's hardcoded above
         gdown --folder "https://drive.google.com/drive/folders/$env:GDRIVE_BASELINE_FOLDER_ID" -O test/baselines/
 
     - name: Run Visual Regression Test
       id: visual_test
       run: |
         python test/test_visual_regression.py --bin-dir build
-        
-    - name: Upload Visual Diff Artifacts on Failure
+
+    - name: Upload Snapshot SVGs on Failure
       if: failure() && steps.visual_test.outcome == 'failure'
       uses: actions/upload-artifact@v4
       with:
-        name: visual-regression-diffs
-        path: test/snapshots/**/*_diff.png
+        name: visual-regression-snapshots
+        path: test/snapshots/*.svg
 
     # ---- Test (Other) ----
     - name: Run Headless Load Test
