--- a/test/visual_targets.yaml
+++ b/test/visual_targets.yaml
@@ -11,47 +11,47 @@ targets:
   - seqname: writeGradientEcho_label
     seq_diagram_time_range_ms: "0~10"
 
-  - seqname: writeEpiRS_label_softdelay
-    seq_diagram_time_range_ms: "0~10"
-  - seqname: writeEpiRS_label
-    seq_diagram_time_range_ms: "0~10"
-  - seqname: writeEpiSpinEchoRS
-    seq_diagram_time_range_ms: "0~10"
-  - seqname: writeFastRadialGradientEcho
-    seq_diagram_time_range_ms: "0~10"
-  - seqname: writeFid
-    seq_diagram_time_range_ms: "0~10"
-  - seqname: writeGradientEcho_grappa
-    seq_diagram_time_range_ms: "0~10"
-  - seqname: writeGradientEcho
-    seq_diagram_time_range_ms: "0~10"
-  - seqname: writeGRE_live_demo
-    seq_diagram_time_range_ms: "0~10"
-  - seqname: writeGRE_live_demo_step0
-    seq_diagram_time_range_ms: "0~10"
-  - seqname: writeHASTE
-    seq_diagram_time_range_ms: "0~10"
-  # - seqname: writeRadialGradientEcho_rotExt
+  # - seqname: writeEpiRS_label_softdelay
   #   seq_diagram_time_range_ms: "0~10"
-  - seqname: writeRadialGradientEcho
-    seq_diagram_time_range_ms: "0~10"
-  - seqname: writeSemiLaser
-    seq_diagram_time_range_ms: "0~10"
-  - seqname: writeSpiral
-    seq_diagram_time_range_ms: "0~10"
-  - seqname: writeTrufi
-    seq_diagram_time_range_ms: "0~10"
-  - seqname: writeTSE
-    seq_diagram_time_range_ms: "0~10"
-  - seqname: writeUTE_rs
-    seq_diagram_time_range_ms: "0~10"
-  - seqname: writeUTE
-    seq_diagram_time_range_ms: "0~10"
-  # - seqname: epi # seems to take a long time, even 120s timeout is not enough
+  # - seqname: writeEpiRS_label
   #   seq_diagram_time_range_ms: "0~10"
-  # - seqname: spi # seems to take a long time, even 120s timeout is not enough
+  # - seqname: writeEpiSpinEchoRS
   #   seq_diagram_time_range_ms: "0~10"
-  # - seqname: spi_sub # seems to take a long time, even 120s timeout is not enough
+  # - seqname: writeFastRadialGradientEcho
   #   seq_diagram_time_range_ms: "0~10"
-  - seqname: writeCineGradientEcho
+  # - seqname: writeFid
+  #   seq_diagram_time_range_ms: "0~10"
+  # - seqname: writeGradientEcho_grappa
+  #   seq_diagram_time_range_ms: "0~10"
+  # - seqname: writeGradientEcho
+  #   seq_diagram_time_range_ms: "0~10"
+  # - seqname: writeGRE_live_demo
+  #   seq_diagram_time_range_ms: "0~10"
+  # - seqname: writeGRE_live_demo_step0
+  #   seq_diagram_time_range_ms: "0~10"
+  # - seqname: writeHASTE
+  #   seq_diagram_time_range_ms: "0~10"
+  - seqname: writeRadialGradientEcho_rotExt
     seq_diagram_time_range_ms: "0~10"
+  # - seqname: writeRadialGradientEcho
+  #   seq_diagram_time_range_ms: "0~10"
+  # - seqname: writeSemiLaser
+  #   seq_diagram_time_range_ms: "0~10"
+  # - seqname: writeSpiral
+  #   seq_diagram_time_range_ms: "0~10"
+  # - seqname: writeTrufi
+  #   seq_diagram_time_range_ms: "0~10"
+  # - seqname: writeTSE
+  #   seq_diagram_time_range_ms: "0~10"
+  # - seqname: writeUTE_rs
+  #   seq_diagram_time_range_ms: "0~10"
+  # - seqname: writeUTE
+  #   seq_diagram_time_range_ms: "0~10"
+  # # - seqname: epi # seems to take a long time, even 120s timeout is not enough
+  # #   seq_diagram_time_range_ms: "0~10"
+  # # - seqname: spi # seems to take a long time, even 120s timeout is not enough
+  # #   seq_diagram_time_range_ms: "0~10"
+  # # - seqname: spi_sub # seems to take a long time, even 120s timeout is not enough
+  # #   seq_diagram_time_range_ms: "0~10"
+  # - seqname: writeCineGradientEcho
+  #   seq_diagram_time_range_ms: "0~10"
