--- a/test/visual_targets.yaml
+++ b/test/visual_targets.yaml
@@ -31,8 +31,8 @@ targets:
     seq_diagram_time_range_ms: "0~10"
   - seqname: writeHASTE
     seq_diagram_time_range_ms: "0~10"
-  # - seqname: writeRadialGradientEcho_rotExt
-  #   seq_diagram_time_range_ms: "0~10"
+  - seqname: writeRadialGradientEcho_rotExt
+    seq_diagram_time_range_ms: "0~10"
   - seqname: writeRadialGradientEcho
     seq_diagram_time_range_ms: "0~10"
   - seqname: writeSemiLaser
