--- a/.github/workflows/windows-release.yml
+++ b/.github/workflows/windows-release.yml
@@ -120,7 +120,7 @@ jobs:
     - name: Run Visual Regression Test
       id: visual_test
       run: |
-        python test/test_visual_regression.py --bin-dir runtime/seqeyes --threshold 0.005
+        python test/test_visual_regression.py --bin-dir runtime/seqeyes --threshold 0.005 --changed-threshold 0.0001
 
     - name: Upload Visual Diff Artifacts on Failure
       if: failure() && steps.visual_test.outcome == 'failure'
